k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-learning
  labels:
    project: devops-learning-project
