k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-service
  namespace: devops-learning
spec:
  selector:
    app: devops-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
